# cardboard

./: Cargo.toml
src/: bbox.rs  camera.rs  capture.rs  data.rs  draw.bak  draw.rs  geom.rs  handlers.rs  lingua.rs  main.rs  operation.rs  paro.rs  style.rs  surface_data.rs  ui_cli.rs  ui_sdl.rs
