[package]
name = "cardboard"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]

[dependencies]
nalgebra = "0.16.0"
cairo-rs = { version ="0.5.0", features = ["png"] }
cairo-sys-rs = "0.7.0"
png = "0.13.1"
geojson = "0.12.0"
ordered-float = "1.0"
time = "*"
sdl2 = "0.31.0"
libc = "0.2.43"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
svgtypes = "0.2"
rayon = "1.0"